Separated behaviour from presentation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/normalize.min.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/sogouExplorerTridentWarning.css">
 
         <!--[if lt IE 9]>
             <script src="js/vendor/html5-3.6-respond-1.1.0.min.js"></script>
@@ -31,8 +31,12 @@
         </style>
     </head>
     <body>
+        <div id="sogouExplorerTridentWarning">
+            <span class="icon"></span>
+            <span class="text">搜狗浏览器用户请切换为“高速”模式</span>
+        </div>
         <div class="container">
-            <h1>Sogou Explorer Bubble</h1>
+            <h1>Sogou Explorer Trident Warning</h1>
             <p>This script shows a warning when using Sogou Explorer in Trident mode, asking the user to switch to Webkit mode.</p>
             <p class="ua">Current browser's user agent is: <span id="ua"></span></p>
         </div>
