--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <body>
         <div id="sogouExplorerTridentWarning">
             <span class="icon"></span>
-            <span class="text">搜狗浏览器用户请切换为“高速”模式</span>
+            <span class="text">当前为兼容模式，点击切换为高速模式</span>
         </div>
         <div class="container">
             <h1>Sogou Explorer Trident Warning</h1>
